<resources>
    <string name="app_name">My Application</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_title">Task title</string>
    <string name="my_task">My Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">Do Something</string>
    <string name="add_tasks">Add Task</string>
    <string name="add_task2">Add Task</string>
    <string name="textview">TextView</string>
    <string name="all_tasks2">All Tasks</string>
    <string name="task_manager">Task Manager</string>
    <string name="task_detail_page">Task Detail Page</string>
    <string name="textview2">TextView</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="description">Description</string>
    <string name="username">username</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="sleep">Sleep</string>
    <string name="code">Code</string>
    <string name="eat">EAT</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state">State</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
</resources>